Bug 1872480: Fixes node-list alignment on storageCluster creation

--- a/frontend/packages/ceph-storage-plugin/src/components/ocs-install/ocs-install.scss
+++ b/frontend/packages/ceph-storage-plugin/src/components/ocs-install/ocs-install.scss
@@ -47,3 +47,18 @@
   display: flex;
   justify-content: space-between;
 }
+
+// Restrict node-list widths
+.ceph-ocs-install__node-list {
+  @media (min-width: 769px) {
+    max-width: 100%;
+  }
+
+  @media (min-width: 992px) {
+    min-width: 650px;
+  }
+
+  @media (min-width: 1200px) {
+    max-width: 70%;
+  }
+}
